Changelog
=========


1.5.3 (unreleased)
------------------

- Add more default builders:

  - a "zcml" builder for creating ZCML files
  - a "python package" builder for creating python package on the file system
  - a "namespace package" builder, used internally by the "python package" builder
  - a "subpackage" builder for extending a python package with nested packages

  [jone]


1.5.2 (2014-12-06)
------------------

- File builder: fix default filename encoding for AT.
  This was a regression in 1.5.0, where filenames were changed to unicode
  because of the consolidation of Archetypes and Dexterity builders.
  [jone]


1.5.1 (2014-12-03)
------------------

- Fix NamedBlobFile import issue for Plone <= 4.2 where blobs are optional.
  [jone]


1.5.0 (2014-12-03)
------------------

- Restore Plone 4.1 compatibility by making any DX imports conditional.
  [lgraf]

- Plone 5 support: default content builders are switched to the dexterity implementation
  by default for Plone >= 5.
  The builder classes were moved from ``archetypes`` module to ``content`` module.
  [jone]


1.4.0 (2014-09-04)
------------------

- Implement collection builder.
  [jone]

- Fixed default value setter for different "owners" field.
  [phgross]


1.3.4 (2014-08-29)
------------------

- DxBuilder: Fix encoding problem when filling default value for "owners" field.
  [jone]


1.3.3 (2014-06-05)
------------------

- DxBuilder: Fix check if field is present (to determine if default values should be set).
  [lgraf]

- DxBuilder: Make sure default values are set before adding content to container.
  [lgraf]


1.3.2 (2014-05-29)
------------------

- Update object_provides in catalog when using provides().
  [jone]


1.3.1 (2014-03-26)
------------------

- Provide a real image (1x1 px GIF) for the Archetypes ImageBuilder.
  [mathias.leimgruber]


1.3.0 (2014-03-25)
------------------

- Implement ATImage builder.
  [jone]
